--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="container">
         <h1>Kanban Board</h1>
+
         <div class="board">
+
             <!-- LIST 1 -->
             <div class="list" id="list1">
                 <h2>To do</h2>
@@ -17,16 +19,26 @@
                 <div class="card" draggable="true" id="card2">Buy Groceries</div>
             </div>
             <!-- LIST 2 -->
+
             <div class="list" id="list2">
                 <h2>In Progress</h2>
                 <div class="card" draggable="true" id="card3">Learn to Code</div>
             </div>
             <!-- LIST 3 -->
+             
             <div class="list" id="list3">
                 <h2>Done</h2>
             </div>
         </div>
+
+        <div class = "addCard">
+            <button id="AddCardButton"> Add Tasks</button>
+        </div>
+        <div class = "deleteCard">
+            <button id="DeleteCardButton"> Delete Tasks</button>
+        </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script3.js"></script>
+
 </body>
 </html>
