search/filter addition

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 <body>
     <div class="container">
         <h1>Kanban Board</h1>
-
+        
+        <div class="search-container">
+            <input type="text" id="searchInput" placeholder="Search tasks...">
+            <select id="categoryFilter">
+                <option value="all">All Categories</option>
+                <option value="list1">To Do</option>
+                <option value="list2">In Progress</option>
+                <option value="list3">Done</option>
+            </select>
+        </div>
+        
         <div class="board">
 
             <!-- LIST 1 -->
